--- a/LogIn/Web.config
+++ b/LogIn/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key ="UnobtrusiveJQueryEnabled"  value="home" />
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.web>
     <authentication mode="Forms" />
